--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
 .App {
+  width: 350px;
+  height: 500px;
+  margin: 10vh auto;
+  background-color: #f6efcf;
+  border-radius: 40px;
+  border: 4px solid #000000;
+}
+h2 {
   text-align: center;
+  font-size: 30px;
+  font-weight: 800;
+}
+ul {
+  background-color: #fff;
+  margin: -10px auto 15px;
+  width: 270px;
+  height: 340px;
+  text-align: center;
+  position: relative;
+}
+form {
+  display: block;
+  background-color: #c1c6be;
+  width: 300px; 
+  margin: 0 auto;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  border-radius: 10px;
+  border: 3px solid #000;
+  background-color: #fff;
+}
+.todoinput {
+  position: absolute;
+  left: 0;
+  margin-right: 20px;
+  width: 80%;
+  height: 35px;
+}
+.submitinput {
+  position: absolute;
+  right: 0;
+  height: 40px;
+  background-color: rgb(48, 187, 140);
+  font-weight: 600;
+  font-size: 14px;
+}
+li {
+  font-weight: 600;
+  width: 100%;
+  position: relative;
+  text-align: left;
+  padding: 7px 0;
+}
+li::before {
+  content: '';
+  position: absolute;
+  width: 80%;
+  height: 0.5px;
+  bottom: 0;
+  background-color:#000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li button {
+  margin-top: 5px;
+  position: absolute;
+  right: 30px;
+  border: none;
+  font-weight: 800;
+  background-color: #fff;
+  color:  rgb(8, 161, 110);
+  font-size: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
